rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__reduce_by__reduce_by_count_distinct.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/reduce_by.rs
assertion_line: 275
expression: result
---
orders__status | orders__category | orders__unique_customers_reduce_category
---------------+------------------+-----------------------------------------
cancelled      | books            | 3                                       
cancelled      | clothing         | 3                                       
cancelled      | electronics      | 3                                       
completed      | books            | 3                                       
completed      | clothing         | 3                                       
completed      | electronics      | 3                                       
pending        | books            | 3                                       
pending        | clothing         | 3                                       
pending        | electronics      | 3
