rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__reduce_by__reduce_by_dim_not_in_query.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/reduce_by.rs
expression: result
---
orders__status | orders__amount_reduce_category
---------------+-------------------------------
cancelled      | 200.00                        
completed      | 1400.00                       
pending        | 650.00
