rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__reduce_by__reduce_by_multiple_dims.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/reduce_by.rs
expression: result
---
orders__status | orders__category | orders__amount_reduce_all
---------------+------------------+--------------------------
cancelled      | books            | 2250.00                  
cancelled      | clothing         | 2250.00                  
cancelled      | electronics      | 2250.00                  
completed      | books            | 2250.00                  
completed      | clothing         | 2250.00                  
completed      | electronics      | 2250.00                  
pending        | books            | 2250.00                  
pending        | clothing         | 2250.00                  
pending        | electronics      | 2250.00
