rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__reduce_by__reduce_by_single_dim.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/reduce_by.rs
expression: result
---
orders__status | orders__category | orders__amount_reduce_category
---------------+------------------+-------------------------------
cancelled      | books            | 200.00                        
cancelled      | clothing         | 200.00                        
cancelled      | electronics      | 200.00                        
completed      | books            | 1400.00                       
completed      | clothing         | 1400.00                       
completed      | electronics      | 1400.00                       
pending        | books            | 650.00                        
pending        | clothing         | 650.00                        
pending        | electronics      | 650.00
